Clean up class path module path handling.